--- a/bower.json
+++ b/bower.json
@@ -2,12 +2,12 @@
   "name": "angular-bindonce",
   "version": "0.3.2",
   "main": "bindonce.js",
-  "description": "Zero watchers binding directives for AngularJS",
+  "description": "Zero watchers binding directives for AngularJS - w/ refresh on event",
   "homepage": "https://github.com/Pasvaz/bindonce",
   "author": "Pasquale Vazzana <pasqualevazzana@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Pasvaz/bindonce.git"
+    "url": "https://github.com/startappdev/bindonce.git"
   },
   "license": "MIT",
   "ignore": [
